--- a/app-content/css/home-style.css
+++ b/app-content/css/home-style.css
@@ -656,7 +656,7 @@ animation-play-state: paused;
     .marquee {
         width: 100%;
         max-width: 100%;
-        height: 3.3rem;
+        height: 3rem;
         white-space: nowrap;
         overflow: hidden; 
         border-top: 2px solid var(--b5blu);
@@ -674,7 +674,7 @@ animation-play-state: paused;
           font-family: 'Jost';
           font-style: normal;
           font-weight: 600;
-          font-size: 1.4rem;
+          font-size: 1.2rem;
           color: var(--b5blu);
       }
       
